# matrixanalysistools

./: .gitignore  README.md  pyproject.toml
src/matrixanalysistools/: __init__.py  exceptions.py
src/matrixanalysistools/analysis/: convergence_analyser.py
src/matrixanalysistools/apps/: __main__matrix_analysis__.py
src/matrixanalysistools/matrix_handler/: root_matrix.py
src/matrixanalysistools/plotting/: plotter.py
src/matrixanalysistools/tests/: test_matrix.py
src/matrixanalysistools/utils/: logging.py
